<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AtBuss</string>
    <string name="menu_search">Søk</string>
    <string name="menu_settings">Innstillinger</string>
    <string name="menu_oracle">Spør orakelet</string>
    <string name="title_activity_at_buss">AtBuss</string>
    <string name="busStopLabel">Busstopp:</string>
    <string name="busRouteLabel">Bussrute:</string>
    <string name="sheduledTimeLabel">Planlagt rutetid:</string>
    <string name="realTimeTimeLabel">Sanntid rutetid:</string>
    <string name="alarmButton">Sett Alarm</string>
    <string name="alarmMinutes">10</string>
    <string name="alarmMinutesLabel">minutter før</string>
    <string name="title_activity_bus_stop">BusStop</string>
    <string name="title_activity_search">Søk</string>
    <string name="title_activity_bus_event">Bussrute</string>
    <string name="search_box_hint">Skriv for å søke</string>
    <string name="ask_oracle_hint">Spør orakelet</string>
    <string name="ask_oracle">Spør</string>
    <string name="title_activity_settings">Innstillinger</string>
    <string name="title_activity_ask_oracle">Spør Orakelet</string>
    <string name="title_activity_main">AtBuss</string>
</resources>