<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/busStopLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/busStopLabel" />

    <TextView
        android:id="@+id/busStopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/busStopLabel"
        android:layout_alignBottom="@+id/busStopLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/busRouteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/busStopLabel"
        android:layout_below="@+id/busStopLabel"
        android:textSize="20sp"
        android:text="@string/busRouteLabel" />

    <TextView
        android:id="@+id/busRouteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/busRouteLabel"
        android:layout_alignBottom="@+id/busRouteLabel"
        android:layout_alignRight="@+id/busStopName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/scheduledTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/busRouteLabel"
        android:layout_below="@+id/busRouteLabel"
        android:textSize="20sp"
        android:text="@string/sheduledTimeLabel" />

    <TextView
        android:id="@+id/scheduledTimeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scheduledTimeLabel"
        android:layout_alignBottom="@+id/scheduledTimeLabel"
        android:layout_alignRight="@+id/busRouteName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/realTimeTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scheduledTimeLabel"
        android:layout_below="@+id/scheduledTimeLabel"
        android:textSize="20sp"
        android:text="@string/realTimeTimeLabel" />

    <TextView
        android:id="@+id/realTimeTimeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/realTimeTimeLabel"
        android:layout_alignBottom="@+id/realTimeTimeLabel"
        android:layout_alignRight="@+id/scheduledTimeName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/alarmMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/alarmButton"
        android:layout_alignBottom="@+id/alarmButton"
        android:layout_alignLeft="@+id/realTimeTimeLabel"
        android:layout_alignRight="@+id/busRouteLabel"
        android:ems="10"
        android:inputType="number"
        android:text="@string/alarmMinutes">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/realTimeTimeName"
        android:layout_below="@+id/realTimeTimeName"
        android:text="@string/alarmButton" />

    <TextView
        android:id="@+id/alarmMinutesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/alarmMinutes"
        android:layout_alignBottom="@+id/alarmMinutes"
        android:layout_toRightOf="@+id/busStopLabel"
        android:textSize="20sp"
        android:text="@string/alarmMinutesLabel" />

</RelativeLayout>